--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "/bin/python3",
+  "python.pythonPath": "/usr/bin/python3.7",
   "python.linting.pylintEnabled": true,
   "python.linting.pycodestyleEnabled": false,
   "python.linting.enabled": true,
